ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords/input.ts:3:9
  |
3 | default abstract class C {}
  |         ^^^^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords/input.ts:3:1
  |
3 | default abstract class C {}
  | ^^^^^^^

